# testCMake

./: .gitignore  README.md
00_message/: CMakeLists.txt
01_helloworld/: CMakeLists.txt  main.cpp
02_libraries/: CMakeLists.txt  main.cpp
02_libraries/alias/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
02_libraries/callShared/: CMakeLists.txt
02_libraries/callStatic/: CMakeLists.txt  main.cpp
02_libraries/callStatic/include/: demo.h
02_libraries/exe_shared_static/: readme.md
02_libraries/exe_shared_static/exe/: CMakeLists.txt  main.cpp
02_libraries/exe_shared_static/shared/: CMakeLists.txt  mymath.cpp  mymath.h
02_libraries/exe_shared_static/shared/src/: mymath.cpp
02_libraries/exe_shared_static/static/: CMakeLists.txt
02_libraries/exe_shared_static/static/plus/: CMakeLists.txt  plus.h
02_libraries/exe_shared_static/static/src/: add_sub.cpp
02_libraries/exe_shared_static/static/sub/: CMakeLists.txt  sub.h
02_libraries/exe_static_shared/: readme.md
02_libraries/exe_static_shared/exe/: CMakeLists.txt  main.cpp
02_libraries/exe_static_shared/shared/: CMakeLists.txt
02_libraries/exe_static_shared/shared/include/: sub_add.h
02_libraries/exe_static_shared/shared/src/: sub_add.cpp
02_libraries/exe_static_shared/static/: CMakeLists.txt
02_libraries/exe_static_shared/static/include/: myMath.h
02_libraries/exe_static_shared/static/src/: myMath.cpp
02_libraries/include/: demo.h
02_libraries/interface/: CMakeLists.txt  main.cpp
02_libraries/interface/includes/: header.hpp
02_libraries/shared/: readme.md
02_libraries/shared/call/: CMakeLists.txt
02_libraries/shared/callShared/: main.cpp
02_libraries/shared/callShared/include/: demo.h
02_libraries/shared/callShared/src/: demo.cpp
02_libraries/shared/create/: CMakeLists.txt
02_libraries/shared/genShared/: CMakeLists.txt
02_libraries/shared/genShared/src/: demo.cpp
02_libraries/src/: demo.cpp
02_libraries/static/: CMakeLists.txt  readme.md
02_libraries/static/call/: CMakeLists.txt  main.cpp
02_libraries/static/create/: CMakeLists.txt
02_libraries/static/create/src/: demo.cpp
02_libraries/static/genStatic/: CMakeLists.txt
02_libraries/static/include/: demo.h
02_libraries/static/static/lib/Debug/: myLib.lib  myStaticLib.lib
03_package/: CMakeLists.txt
03_package/01_find_package/cmake/: CMakeLists.txt
03_package/01_find_package/config/: TestPackageConfig.cmake
03_package/02_3rdparty/: CMakeLists.txt
03_package/03_customPackage/createPackage/: CMakeLists.txt
03_package/03_customPackage/createPackage/cmake/: PLUSConfig.cmake.in
03_package/03_customPackage/createPackage/include/: plus.h
03_package/03_customPackage/createPackage/src/: plus.cpp
03_package/03_customPackage/interface/: CMakeLists.txt
03_package/03_customPackage/interface/cmake/: MyMathConfig.cmake
03_package/03_customPackage/interface/sources/: CMakeLists.txt
03_package/03_customPackage/interface/sources/global/: global.h
03_package/03_customPackage/interface/sources/include/: myMath.h
03_package/03_customPackage/interface/sources/src/: myMath.cpp
03_package/03_customPackage/usePackage/: CMakeLists.txt  main.cpp
03_package/04_component/create/: CMakeLists.txt
03_package/04_component/create/cmake/: MathConfig.cmake.in
03_package/04_component/create/plus/: CMakeLists.txt
03_package/04_component/create/plus/include/: plus.h
03_package/04_component/create/sub/: CMakeLists.txt
03_package/04_component/create/sub/src/: sub.cpp
03_package/04_component/use/: CMakeLists.txt  main.cpp
03_package/05_component_self/: CMakeLists.txt
03_package/05_component_self/plus/: CMakeLists.txt
03_package/05_component_self/plus/src/: plus.cpp
03_package/05_component_self/sub/: CMakeLists.txt
03_package/05_component_self/sub/include/: sub.h
03_package/05_component_self/use/: CMakeLists.txt
04_command/01_add_custom_command/: CMakeLists.txt  main.cpp
04_command/02_add_custom_target/: CMakeLists.txt
04_command/add_custom_command/: CMakeLists.txt  main.cpp
04_command/add_custom_target/: CMakeLists.txt
04_command/command_message/: CMakeLists.txt
04_command/config/: CMakeLists.txt  main.cpp
05_file/: CMakeLists.txt
05_python/: CMakeLists.txt
06_function/: CMakeLists.txt
07_list/: CMakeLists.txt
08_property/: CMakeLists.txt
09_vs_sln/: CMakeLists.txt
09_vs_sln/source/: CMakeLists.txt
09_vs_sln/source/project1/: CMakeLists.txt  main.cpp
09_vs_sln/source/project2/: CMakeLists.txt
10_install/: CMakeLists.txt
10_install/01_target/: CMakeLists.txt
10_install/01_target/include/: test.h
10_install/01_target/resources/: readme.md
10_install/01_target/src/: test.cpp
10_install/02_other/: CMakeLists.txt  main.cpp
11_platform/: CMakeLists.txt
12_external/ExternalProject/: CMakeLists.txt  main.cpp
12_external/FetchContent/: CMakeLists.txt
12_external/cpm/: CMakeLists.txt  main.cpp
13_module/: CMakeLists.txt
13_module/myCMake/: test.cmake
14_multiTarget/: CMakeLists.txt
14_multiTarget/sources/: CMakeLists.txt
14_multiTarget/sources/project_1/: CMakeLists.txt  main.cpp
14_multiTarget/sources/project_2/: CMakeLists.txt  main.cpp
14_multiTarget/sources/project_3/: CMakeLists.txt
14_multiTarget/sources/project_4/: CMakeLists.txt  main.cpp
15_traverse_target/: CMakeLists.txt
16_ctest/: CMakeLists.txt
16_ctest/gtest/lib/: gtest_main.lib
16_ctest/lib/: client.cpp  client.h  myserver.cpp  myserver.h  serverbase.h
16_ctest/src/: CMakeLists.txt  main.cpp
16_ctest/test/: CMakeLists.txt  main.cpp  test_class.cpp  test_func.cpp  test_mock.cpp
